@@ -1,3 +1,8 @@
+Tue Aug 13 08:27:18 2002  George Lebl <jirka@5z.com>
+
+	* config/gdm.conf.in: update comment on top to be correct
+          (USR1 vs. HUP) redhat bug 71308
+
 Thu Aug 08 09:36:11 2002  George Lebl <jirka@5z.com>
 
 	* Release 2.4.0.7
